# graphics

./: .gitmodules  CMakeLists.txt  grid.h
examples/drawing_primitives/: main.cpp
examples/drawing_wavefront/: CMakeLists.txt  main.cpp  parse.cpp  parse.h
examples/line_clipping/: CMakeLists.txt  algorithms.cpp  algorithms.h  main.cpp
examples/polygon_clipping/: CMakeLists.txt  algorithms.h  geometry.cpp  geometry.h  main.cpp  sutherland_hodgman.cpp  weiler_atherton.cpp
libs/Raster/: .gitignore  CMakeLists.txt
libs/Raster/include/: Raster.h
libs/Raster/src/: Polygon.cpp  Primitives.cpp  Raster.cpp  RasterPrimitives.cpp  RasterPrimitives.h
line_circle/: 1  CMakeLists.txt  Makefile  functions.cpp  functions.h  main.cpp  note.md
polygon/: main.cpp
